examples: Add atmega-hal examples using ATmega2560
Add some examples that demonstrate direct usage of `atmega-hal` instead
of going through `arduino-hal` like most examples currently do.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,10 @@ jobs:
           - type: board
             name: nano168
             examples: true
+          - type: board
+            # Not really a board, but also an examples crate
+            name: atmega2560
+            examples: true
           - type: mcu
             name: atmega1280
             spec: atmega1280
