--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "examples/arduino-mega1280",
     "examples/arduino-nano",
     "examples/arduino-uno",
+    "examples/atmega2560",
     "examples/nano168",
     "examples/sparkfun-promicro",
     "examples/sparkfun-promini-3v3",
