examples: Pin proc-macro2 in all examples
The latest releases of `proc-macro2` do not support the rust toolchain
that we use [1].  Thus, we must fix this dependency to an older version
where our toolchain is still supported.

[1]: https://github.com/Rahix/avr-hal/issues/537

--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -28,3 +28,9 @@ version = "0.5.4"
 [dependencies.either]
 version = "1.6.1"
 default-features = false
+
+# The latest releases of `proc-macro2` do not support the rust toolchain that
+# we use.  Thus, we must fix this dependency to an older version where our
+# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
+[build-dependencies.proc-macro2]
+version = "=1.0.79"
