--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,3 +133,6 @@ jobs:
       - name: Check ravedude
         run: |
           cargo check --manifest-path ravedude/Cargo.toml
+      - name: Test ravedude
+        run: |
+          cargo test --manifest-path ravedude/Cargo.toml
