Adding a new macro for making a UsbBus

--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -20,7 +20,7 @@ board-selected = []
 mcu-atmega = []
 mcu-attiny = []
 arduino-diecimila = ["mcu-atmega", "atmega-hal/atmega168", "board-selected"]
-arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
+arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected", "usb-device"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
 arduino-mega1280 = ["mcu-atmega", "atmega-hal/atmega1280", "board-selected"]
 arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
@@ -39,6 +39,7 @@ docsrs = ["arduino-uno"]
 cfg-if = "1"
 embedded-hal = "1.0"
 ufmt = "0.2.0"
+usb-device = { version = "0.3.2", optional = true }
 
 [dependencies.embedded-hal-v0]
 version = "0.2.3"
