--- a/ravedude/src/boards.toml
+++ b/ravedude/src/boards.toml
@@ -239,17 +239,17 @@
     # No IDs here because the Nano 168 uses a generic USB-Serial chip.
     error = "Not able to guess port"
 
-[atmega-dip40-atmega1284p]
+[mighty-core-atmega1284p]
     name = "Mighty Core DIP40 Dev Board for ATMEGA1284P"
 
-    [atmega-dip40-atmega1284p.reset]
+    [mighty-core-atmega1284p.reset]
     automatic = true
 
-    [atmega-dip40-atmega1284p.avrdude]
+    [mighty-core-atmega1284p.avrdude]
     programmer = "arduino"
     partno = "atmega1284p"
     baudrate = -1
     do-chip-erase = true
 
-    [atmega-dip40-atmega1284p.usb-info]
+    [mighty-core-atmega1284p.usb-info]
     error = "Not able to guess port"
