--- a/mcu/atmega-hal/Cargo.toml
+++ b/mcu/atmega-hal/Cargo.toml
@@ -26,6 +26,7 @@ atmega128a = ["avr-device/atmega128a", "device-selected"]
 atmega1280 = ["avr-device/atmega1280", "device-selected"]
 atmega1284p = ["avr-device/atmega1284p", "device-selected"]
 atmega8 = ["avr-device/atmega8", "device-selected"]
+atmega88p = ["avr-device/atmega88p", "device-selected"]
 
 critical-section-impl = ["avr-device/critical-section-impl"]
 
@@ -36,10 +37,10 @@ disable-device-selection-error = []
 docsrs = ["atmega328p"]
 
 [dependencies]
-avr-hal-generic = { path = "../../avr-hal-generic/" }
+avr-hal-generic = { path = "../../avr-hal-generic" }
 
 [dependencies.avr-device]
-version = "0.5.4"
+path = "../../../avr-device"
 
 # Because this crate has its own check that at least one device is selected, we
 # can safely "circumvent" the check in `avr-device`.
