--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arduino-hal"
-version = "0.3.0"
+version = "0.4.0"
 
 authors = ["Rahix <rahix@rahix.de>"]
 edition = "2021"
@@ -17,157 +17,55 @@ rt = ["avr-device/rt"]
 critical-section-impl = ["avr-device/critical-section-impl"]
 
 # Board-specific targets. 
-arduino-diecimila = ["arduino-diecimila-no-deprecated-globals"]
-arduino-leonardo = ["arduino-leonardo-no-deprecated-globals"]
-arduino-mega2560 = ["arduino-mega2560-no-deprecated-globals"]
-arduino-mega1280 = ["arduino-mega1280-no-deprecated-globals"]
-arduino-nano = ["arduino-nano-no-deprecated-globals"]
-arduino-uno = ["arduino-uno-no-deprecated-globals"]
-trinket-pro = ["trinket-pro-no-deprecated-globals"]
-sparkfun-promicro = ["sparkfun-promicro-no-deprecated-globals"]
-sparkfun-promini-3v3 = ["sparkfun-promini-3v3-no-deprecated-globals"]
-sparkfun-promini-5v = ["sparkfun-promini-5v-no-deprecated-globals"]
-trinket = ["trinket-no-deprecated-globals"]
-nano168 = ["nano168-no-deprecated-globals"]
-
-# Board-specific targets with deprecated globals. This was the default in arduino-hal <0.3.0
-arduino-diecimila-deprecated-globals = [
-    "_board-arduino-diecimila",
-    "atmega-hal/deprecated-globals",
-    "deprecated-globals",
-]
-arduino-leonardo-deprecated-globals = ["_board-arduino-leonardo", "atmega-hal/deprecated-globals", "deprecated-globals"]
-arduino-mega2560-deprecated-globals = ["_board-arduino-mega2560", "atmega-hal/deprecated-globals", "deprecated-globals"]
-arduino-mega1280-deprecated-globals = ["_board-arduino-mega1280", "atmega-hal/deprecated-globals", "deprecated-globals"]
-arduino-nano-deprecated-globals = ["_board-arduino-nano", "atmega-hal/deprecated-globals", "deprecated-globals"]
-arduino-uno-deprecated-globals = ["_board-arduino-uno", "atmega-hal/deprecated-globals", "deprecated-globals"]
-trinket-pro-deprecated-globals = ["_board-trinket-pro", "atmega-hal/deprecated-globals", "deprecated-globals"]
-sparkfun-promicro-deprecated-globals = [
-    "_board-sparkfun-promicro",
-    "atmega-hal/deprecated-globals",
-    "deprecated-globals",
-]
-sparkfun-promini-3v3-deprecated-globals = [
-    "_board-sparkfun-promini-3v3",
-    "atmega-hal/deprecated-globals",
-    "deprecated-globals",
-]
-sparkfun-promini-5v-deprecated-globals = [
-    "_board-sparkfun-promini-5v",
-    "atmega-hal/deprecated-globals",
-    "deprecated-globals",
-]
-trinket-deprecated-globals = ["_board-trinket", "attiny-hal/deprecated-globals", "deprecated-globals"]
-nano168-deprecated-globals = ["_board-nano168", "atmega-hal/deprecated-globals", "deprecated-globals"]
-
-# Board-specific targets without deprecated globals. This is the default in arduino-hal 0.3.0
-arduino-diecimila-no-deprecated-globals = ["_board-arduino-diecimila"]
-arduino-leonardo-no-deprecated-globals = ["_board-arduino-leonardo"]
-arduino-mega2560-no-deprecated-globals = ["_board-arduino-mega2560"]
-arduino-mega1280-no-deprecated-globals = ["_board-arduino-mega1280"]
-arduino-nano-no-deprecated-globals = ["_board-arduino-nano"]
-arduino-uno-no-deprecated-globals = ["_board-arduino-uno"]
-trinket-pro-no-deprecated-globals = ["_board-trinket-pro"]
-sparkfun-promicro-no-deprecated-globals = ["_board-sparkfun-promicro"]
-sparkfun-promini-3v3-no-deprecated-globals = ["_board-sparkfun-promini-3v3"]
-sparkfun-promini-5v-no-deprecated-globals = ["_board-sparkfun-promini-5v"]
-trinket-no-deprecated-globals = ["_board-trinket"]
-nano168-no-deprecated-globals = ["_board-nano168"]
-
-# Include soon-to-be-deprecated globals in the crate. Only one MCU can be selected if deprecated globals are enabled
-deprecated-globals = []
+arduino-diecimila = ["_board-arduino-diecimila"]
+arduino-leonardo = ["_board-arduino-leonardo"]
+arduino-mega2560 = ["_board-arduino-mega2560"]
+arduino-mega1280 = ["_board-arduino-mega1280"]
+arduino-nano = ["_board-arduino-nano"]
+arduino-uno = ["_board-arduino-uno"]
+trinket-pro = ["_board-trinket-pro"]
+sparkfun-promicro = ["_board-sparkfun-promicro"]
+sparkfun-promini-3v3 = ["_board-sparkfun-promini-3v3"]
+sparkfun-promini-5v = ["_board-sparkfun-promini-5v"]
+trinket = ["_board-trinket"]
+nano168 = ["_board-nano168"]
 
 # When using this crate from another lib crate, you can use this feature to suppress the chip selection error in favor of your own error
 disable-board-selection-error = ["_board-selected"]
 
 # MCU-specific implementation features
-# Do not use directly; use either an <mcu>-deprecated-globals feature or any number of <mcu>-no-deprecated-globals features
-_board-arduino-diecimila = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega168-no-deprecated-globals",
-]
-_board-arduino-leonardo = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega32u4-no-deprecated-globals",
-]
-_board-arduino-mega2560 = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega2560-no-deprecated-globals",
-]
-_board-arduino-mega1280 = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega1280-no-deprecated-globals",
-]
-_board-arduino-nano = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega328p-no-deprecated-globals",
-    "atmega-hal/enable-extra-adc",
-]
-_board-arduino-uno = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega328p-no-deprecated-globals",
-]
-_board-trinket-pro = ["_board-selected", "_mcu-atmega", "atmega-hal/atmega328p-no-deprecated-globals"]
-_board-sparkfun-promicro = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega32u4-no-deprecated-globals",
-]
-_board-sparkfun-promini-3v3 = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega328p-no-deprecated-globals",
-    "atmega-hal/enable-extra-adc",
-]
-_board-sparkfun-promini-5v = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega328p-no-deprecated-globals",
-    "atmega-hal/enable-extra-adc",
-]
-_board-trinket = ["_board-selected", "_mcu-attiny", "attiny-hal/attiny85-no-deprecated-globals"]
-_board-nano168 = [
-    "_board-selected",
-    "_mcu-atmega",
-    "_default-serial",
-    "atmega-hal/atmega168-no-deprecated-globals",
-    "atmega-hal/enable-extra-adc",
-]
+_board-arduino-diecimila = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega168"]
+_board-arduino-leonardo = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega32u4"]
+_board-arduino-mega2560 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega2560"]
+_board-arduino-mega1280 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega1280"]
+_board-arduino-nano = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
+_board-arduino-uno = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p"]
+_board-trinket-pro = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p"]
+_board-sparkfun-promicro = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega32u4"]
+_board-sparkfun-promini-3v3 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
+_board-sparkfun-promini-5v = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
+_board-trinket = ["_mcu-attiny", "attiny-hal/attiny85"]
+_board-nano168 = ["_mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc"]
 
-_mcu-atmega = []
-_mcu-attiny = []
+_mcu-atmega = ["_board-selected"]
+_mcu-attiny = ["_board-selected"]
 _default-serial = []
 
 _board-selected = []
 
 docsrs = [
-    "arduino-diecimila-no-deprecated-globals",
-    "arduino-leonardo-no-deprecated-globals",
-    "arduino-mega2560-no-deprecated-globals",
-    "arduino-mega1280-no-deprecated-globals",
-    "arduino-nano-no-deprecated-globals",
-    "arduino-uno-no-deprecated-globals",
-    "trinket-pro-no-deprecated-globals",
-    "sparkfun-promicro-no-deprecated-globals",
-    "sparkfun-promini-3v3-no-deprecated-globals",
-    "sparkfun-promini-5v-no-deprecated-globals",
-    "trinket-no-deprecated-globals",
-    "nano168-no-deprecated-globals",
+    "arduino-diecimila",
+    "arduino-leonardo",
+    "arduino-mega2560",
+    "arduino-mega1280",
+    "arduino-nano",
+    "arduino-uno",
+    "trinket-pro",
+    "sparkfun-promicro",
+    "sparkfun-promini-3v3",
+    "sparkfun-promini-5v",
+    "trinket",
+    "nano168",
 ]
 
 [dependencies]
