--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -26,7 +26,8 @@ arduino-mega1280 = ["mcu-atmega", "atmega-hal/atmega1280", "board-selected"]
 arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
 trinket-pro = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
-sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
+sparkfun-promicro-3v3 = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
+sparkfun-promicro-5v = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 sparkfun-promini-3v3 = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 sparkfun-promini-5v = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 trinket = ["mcu-attiny", "attiny-hal/attiny85", "board-selected"]
