Add atmega88p to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,10 @@ jobs:
             spec: atmega48p
             crate: atmega-hal
           - type: mcu
+            name: atmega88p
+            spec: atmega88p
+            crate: atmega-hal
+          - type: mcu
             name: atmega1284p
             spec: atmega1284p
             crate: atmega-hal
