--- a/ravedude/Cargo.toml
+++ b/ravedude/Cargo.toml
@@ -20,8 +20,4 @@ ctrlc = "3.2.1"
 serde = { version = "1.0.197", features = ["serde_derive"] }
 toml = "0.8.11"
 either = "1.10.0"
-
-[dependencies.structopt]
-version = "0.3.21"
-default-features = false
-features = ["color"]
+clap = { version = "3.0.0", features = ["derive", "env"] }
