--- a/examples/arduino-mega1280/.cargo/config.toml
+++ b/examples/arduino-mega1280/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
-target = "../../avr-specs/avr-atmega1280.json"
+target = "avr-none"
+rustflags = ["-C", "target-cpu=atmega1280"]
 
 [target.'cfg(target_arch = "avr")']
 runner = "ravedude -cb 57600 mega1280"
