--- a/examples/atmega2560/.cargo/config.toml
+++ b/examples/atmega2560/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
-target = "../../avr-specs/avr-atmega2560.json"
+target = "avr-none"
+rustflags = ["-C", "target-cpu=atmega2560"]
 
 [target.'cfg(target_arch = "avr")']
 runner = "ravedude -cb 57600 mega2560"
