--- a/examples/sparkfun-promicro/.cargo/config.toml
+++ b/examples/sparkfun-promicro/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
-target = "../../avr-specs/avr-atmega32u4.json"
+target = "avr-none"
+rustflags = ["-C", "target-cpu=atmega32u4"]
 
 [target.'cfg(target_arch = "avr")']
 runner = "ravedude promicro"
