--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -41,9 +41,11 @@ embedded-hal = "1.0"
 ufmt = "0.2.0"
 
 [dependencies.avr-hal-generic]
+version = "0.1.0"
 path = "../avr-hal-generic/"
 
 [dependencies.atmega-hal]
+version = "0.1.0"
 path = "../mcu/atmega-hal/"
 optional = true
 
@@ -54,6 +56,7 @@ optional = true
 features = ["disable-device-selection-error"]
 
 [dependencies.attiny-hal]
+version = "0.1.0"
 path = "../mcu/attiny-hal/"
 optional = true
 
