--- a/mcu/attiny-hal/Cargo.toml
+++ b/mcu/attiny-hal/Cargo.toml
@@ -28,7 +28,7 @@ disable-device-selection-error = []
 docsrs = ["attiny85"]
 
 [dependencies]
-avr-hal-generic = { path = "../../avr-hal-generic/" }
+avr-hal-generic = { version = "0.1.0", path = "../../avr-hal-generic/" }
 
 [dependencies.avr-device]
 version = "0.7"
