--- a/mcu/atmega-hal/Cargo.toml
+++ b/mcu/atmega-hal/Cargo.toml
@@ -15,6 +15,7 @@ rt = ["avr-device/rt"]
 device-selected = []
 enable-extra-adc = []
 atmega48p = ["avr-device/atmega48p", "device-selected"]
+atmega16 = ["avr-device/atmega16", "device-selected"]
 atmega164pa = ["avr-device/atmega164pa", "device-selected"]
 atmega168 = ["avr-device/atmega168", "device-selected"]
 atmega328p = ["avr-device/atmega328p", "device-selected"]
