Revert advertising release builds
Commit 9e96d0efe673 ("Update toolchain to 2025-03-03") moved towards
release-builds only as a measure against panic bloat in some examples.
Revert this as the source of the panic bloat has been removed.

Fixes: 9e96d0efe673 ("Update toolchain to 2025-03-03")

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,13 +107,13 @@ jobs:
         run: sudo apt-get install -y avr-libc binutils-avr gcc-avr
       - name: Compile board crate and examples
         if: "${{ matrix.m.type == 'board' && matrix.m.examples }}"
-        run: cd "examples/${{ matrix.m.name }}" && cargo build --release --bins
+        run: cd "examples/${{ matrix.m.name }}" && cargo build --bins
       - name: Compile board crate (without examples)
         if: "${{ matrix.m.type == 'board' && !matrix.m.examples }}"
-        run: cd "arduino-hal/" && cargo build --release --features "${{ matrix.m.name }}"
+        run: cd "arduino-hal/" && cargo build --features "${{ matrix.m.name }}"
       - name: Test-compile HAL crate for an MCU
         if: "${{ matrix.m.type == 'mcu' }}"
-        run: cd "mcu/${{ matrix.m.crate }}" && RUSTFLAGS="-C target-cpu=${{ matrix.m.name }}" cargo build --release --target=avr-none --features "${{ matrix.m.name }}" -Z build-std=core
+        run: cd "mcu/${{ matrix.m.crate }}" && RUSTFLAGS="-C target-cpu=${{ matrix.m.name }}" cargo build --target=avr-none --features "${{ matrix.m.name }}" -Z build-std=core
 
   ravedude:
     name: "ravedude"
