examples: Add new Ravedude.toml configurations for each board
With the new version of ravedude [1], configuration happens via a new
`Ravedude.toml` file.  Add this file for each of the example boards.

[1]: https://github.com/Rahix/avr-hal/blob/main/ravedude/CHANGELOG.md#020---2025-04-22

--- a/examples/arduino-diecimila/.cargo/config.toml
+++ b/examples/arduino-diecimila/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega168"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude diecimila"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
