--- a/examples/sparkfun-promini-5v/.cargo/config.toml
+++ b/examples/sparkfun-promini-5v/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega328p"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude promini-5v"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
