--- a/examples/arduino-mega1280/.cargo/config.toml
+++ b/examples/arduino-mega1280/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega1280"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude -cb 57600 mega1280"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
