--- a/examples/arduino-uno/.cargo/config.toml
+++ b/examples/arduino-uno/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega328p"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude uno -cb 57600"
+runner = "ravedude"
 # To run in simulator, replace the line above with this:
 # runner = "simavr -m atmega328p"
 
