--- a/examples/atmega2560/.cargo/config.toml
+++ b/examples/atmega2560/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega2560"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude -cb 57600 mega2560"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
