--- a/examples/sparkfun-promicro/.cargo/config.toml
+++ b/examples/sparkfun-promicro/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega32u4"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude promicro"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
