--- a/examples/trinket/.cargo/config.toml
+++ b/examples/trinket/.cargo/config.toml
@@ -3,7 +3,7 @@ target = "avr-none"
 rustflags = ["-C", "target-cpu=attiny85"]
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude trinket"
+runner = "ravedude"
 
 [unstable]
 build-std = ["core"]
